<resources>
    <string name="app_name">Game</string>
    <string name="sudoku">Sudoku</string>
    <string name="guess_numbers">Guess Numbers</string>
    <string name="click">Click Or Die</string>
    <string name="title">Choose a game:</string>
    <string name="number_hint">Enter a number from 0 to 100</string>
    <string name="button_send">Let\'s go!</string>
    <string name="number_life">You have 5 attemps left.</string>
    <string name="congrats_message">Congratulations! You\'ve figured out the correct number.</string>
    <string name="random_num">press</string>
    <string name="time_count_down">time_remaining</string>
    <string name="game_over">Game Over</string>
    <string name="game_result">Lose or Win</string>
    <string name="NumClick">NumClick</string>
    <string name="button_game_easy">easy</string>
    <string name="button_game_hard">hard</string>
    <string name="NumberOfClick">NumOfClick</string>
    <string name="UserEmail">UserEmail</string>
    <string name="Password">Password</string>
    <string name="GuessNum_restart">Restart</string>
    <string name="backMenu">backMenu</string>
    <string name="mazeQuit">Quit</string>
    <string name="mazeSave">Save</string>
    <string name="adventure_blue">BLUE</string>
    <string name="adventure">Green</string>
    <string name="adventure_gray">Gray</string>
    <string name="adventure_color">select color</string>
    <string name="DisplayCurrentMazeScoreA">Total Maze Score:</string>
    <string name="DisplayMazeEarnScore">You Earn:</string>
    <string name="gameCenterQuit">Quit</string>
    <string name="saveGuessNumber">Save</string>
    <string name="button_level_0">Easy</string>
    <string name="button_level_1">Medium</string>
    <string name="button_level_2">Hard</string>
    <string name="choose_level">Choose Level</string>
    <string name="store">STORE</string>
    <string name="game_center">Game Center</string>
    <string name="yes">YES</string>
    <string name="timeRemaining">time</string>
    <string name="startMazeButton">Start Game</string>
    <string name="submit">submit</string>
    <string name="firstPlace">1.</string>
    <string name="secondPlace">2.</string>
    <string name="thirdPlace">3.</string>
    <string name="fourthPlace">4.</string>
    <string name="fifthPlace">5.</string>
    <string name="level_choosing">Levels</string>
</resources>
